# dromajo

./: .gitignore  .gitmodules  ANDESTAR_EXT.md  ASTAR_STATUS  CMakeLists.txt  ESPERANTO_README.md  EXT_NOTES.md  EXT_STATUS.md  README.md  ZXX_EXT.md  doit  stf_lib
.github/workflows/: main.yml
bootrom/: Makefile
include/: block_device.h  dromajo_fp_template.h  dromajo_isa.h  dromajo_protos.h  dromajo_sha.h.in  dromajo_stf.h  dromajo_template.h  machine.h  network.h  options.h  riscv_cpu.h  riscv_isa.h  riscv_machine.h  softfp.h  term_io.h
scripts/: quick_run.sh
src/: block_device.cpp  dromajo.cpp  dromajo_isa.cpp  dromajo_main.cpp  dromajo_stf.cpp  dromajo_trace.cpp  float_support.cpp  network.cpp  options.cpp  riscv_cpu.cpp  riscv_isa.cpp  riscv_machine.cpp  term_io.cpp  zfa.cpp
tests/: CMakeLists.txt
tests/condor/: Makefile  Vars.mk  quick_run.sh  run_decoder.sh
tests/condor/inc/: andestar_test_macros.h
tests/condor/src/andestar/: addigp.S  bbc.S  bbs.S  beqc.S  bfos.S  bfoz.S  bnec.S  ffb.S  ffmism.S  ffzmism.S  flmism.S  lbgp.S  lbugp.S  ldgp.S  lea_b_ze.S  lea_d.S  lea_d_ze.S  lea_h.S  lea_h_ze.S  lea_w.S  lea_w_ze.S  lhgp.S  lhugp.S  lwgp.S  lwugp.S  sbgp.S  sdgp.S  shgp.S  swgp.S
tests/condor/src/decoder/: decoder.c
tests/condor/src/zfa/: astar.S  astar.c  astar.elf  astar.objdump  astar.riscv  bmi_sanity.bare.riscv  doit  fleq_d.S  fli_d.S  fli_s.S  fminm_d.S  fminm_s.S  fround_d.S  fround_s.S  froundnx_d.S  froundnx_s.S  log  sanity.c  sanity.zstf
tests/condor/src/zfh/: fli_h.S  fminm_h.S  fround_h.S  froundnx_h.S
tests/condor/src/zicond/: czero_eqz.S  czero_neq.S  czero_nez.S
tests/isa/: Makefile  NOTES.md  run_one.sh  tables.py
tests/isa_test_suite/: Makefile  condor_tests_list.txt  disabled_isa_tests.txt  enabled_isa_tests.txt  isa_tests_list.txt  quick_run.sh  run_condor_isa_test_suite.sh  run_isa_test_suite.sh  run_riscv_isa_test_suite.sh  update_disabled_isa_tests_list.sh
tests/isa_test_suite/build_isa/: Makefile
tests/isa_test_suite/build_isa/benchmarks/: dhrystone.riscv  median.riscv  memcpy.riscv  mm.riscv  mt-matmul.riscv  mt-memcpy.riscv  mt-vvadd.riscv  multiply.riscv  pmp.riscv  qsort.riscv  rsort.riscv  spmv.riscv  towers.riscv  vec-daxpy.riscv  vec-memcpy.riscv  vec-sgemm.riscv  vec-strcmp.riscv  vvadd.riscv
tests/isa_test_suite/build_isa/isa/: Makefile
tests/isa_test_suite/build_isa/isa/rv32mi/: Makefrag
tests/isa_test_suite/condor-tests/isa/: Makefile
tests/isa_test_suite/condor-tests/isa/rv32mi/: breakpoint.S  illegal.S  lh-misaligned.S  lw-misaligned.S  ma_addr.S  sbreak.S  sh-misaligned.S  sw-misaligned.S  zicntr.S
tests/isa_test_suite/condor-tests/isa/rv64mi/: Makefrag
tests/isa_test_suite/condor_tests/: Makefile.in
tests/isa_test_suite/condor_tests/isa/: Makefile
tests/isa_test_suite/condor_tests/isa/condor/: Makefrag  sanity.S
tests/isa_test_suite/condor_tests/isa/rv64mi/: access.S
tests/reset_vector/: run_test.sh
tests/reset_vector/elf/: dhrystone_opt1.bare.riscv  dhrystone_opt2.bare.riscv  dhrystone_opt3.bare.riscv
tests/reset_vector/golden/: dhrystone_opt1.bare.riscv.zstf  dhrystone_opt2.bare.riscv.zstf  dhrystone_opt3.bare.riscv.zstf
tests/riscv_isa_test/: Makefile  allowed_isa_tests.txt  run_riscv_isa_test.sh
tests/stf_gen/: run_bare_metal.sh
tests/stf_gen/elf/: bmi_mm.bare.riscv  bmi_towers.bare.riscv  illegal.riscv
tests/stf_gen/golden/: bmi_mm.bare.stf  bmi_mm.bare.zstf  bmi_towers.bare.stf  bmi_towers.bare.zstf  golden.bz2  illegal.stf  illegal.zstf
tests/stf_load_store/: CMakeLists.txt  run_load_store_test.sh
tests/stf_load_store/common/: crt.S  rootfs.cpio  stf_load_store.bare.riscv
tests/stf_load_store/golden/: linux.zstf  stf_load_store.zstf
tests/stf_load_store/scripts/: build_fs.sh  check_riscv_env_variable.sh  create_linux_collateral.sh  run_baremetal_test.sh  run_linux_test.sh
tests/stf_load_store/src/: main.c  median_main.c
